# datalakesurfer

./: README.md  pyproject.toml  requirements.txt  setup.py
datalakesurfer/: gcs_format_detector.py  s3_format_detector.py
datalakesurfer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
datalakesurfer/detectors/: fabric_iceberg_detector.py  gcs_base_detector.py  gcs_delta_detector.py  gcs_iceberg_detector.py  gcs_parquet_detector.py  iceberg_detector.py  s3_base_detector.py  s3_delta_detector.py  s3_iceberg_detector.py  s3_parquet_detector.py
datalakesurfer/models/: gcs_models.py  s3_models.py
datalakesurfer/query/: adls_delta_query.py  fabric_delta_query.py
datalakesurfer/schemas/: base_schema.py  delta_schema.py  fabric_delta_schema.py  gcs_delta_schema.py  gcs_iceberg_schema.py  gcs_parquet_schema.py  parquet_schema.py  s3_delta_schema.py  s3_iceberg_schema.py  s3_parquet_schema.py
datalakesurfer/utils/: credentials.py  customcredentials.py  exceptions.py  transform_dtype.py  validators.py
