[tool.poetry]
name = "datalakesurfer"
version = "0.1.0"
description = "A Python package for Azure Datalake Storage and Microsoft Fabric Lakehouse, enables format detection and schema retrieval for Iceberg, Delta, and Parquet formats.It also helps identify paritioned columns for parquet datasets."
authors = ["Keshav Kant Singh masterkeshav@gmail.com"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/keshavksingh/datalakesurfer"
repository = "https://github.com/keshavksingh/datalakesurfer"
keywords = ["azure", "microsoft fabric", "datalake", "lakehouse", "adlsgen2", "formats", "schema", "detection"]

[tool.poetry.dependencies]
python = "^3.8"
pyarrowfs-adlgen2 = "^0.2.5"
adlfs = "^2023.12.0"
azure-identity = "^1.17.1"
azure-storage-file-datalake = "^12.17.0"
numpy = "^1.26.4"
pandas = "^1.5.3"
pyOpenSSL = "^24.2.1"
cryptography = "^43.0.1"
duckdb = "^1.1.1"
deltalake = "^0.20.2"
pydantic = "^2.11.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"