[tool.poetry]
name = "datalakesurfer"
version = "0.1.6"
description = "A Python package for Azure Datalake Storage adlsgen2 [abfss://] and Microsoft Fabric Lakehouse [abfss://], Google Cloud Storage [gs://bucket], AWS S3 bucket [s3://bucket] enables format detection and schema retrieval for Iceberg, Delta, and Parquet formats.It helps identify paritioned columns for parquet datasets. It also supports querying Delta, Parquet, and Iceberg formats through SQL constructs."
authors = ["Keshav Kant Singh masterkeshav@gmail.com"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/keshavksingh/datalakesurfer"
repository = "https://github.com/keshavksingh/datalakesurfer"
keywords = ["azure", "microsoft fabric", "datalake", "lakehouse", "adlsgen2", "formats", "schema", "detection", "delta querying"]

[tool.poetry.dependencies]
python = "^3.8"
pyarrowfs-adlgen2 = "^0.2.5"
adlfs = "^2024.12.0"
azure-identity = "^1.17.1"
azure-storage-file-datalake = "^12.21.0"
numpy = "^1.26.4"
pandas = "^1.5.3"
pyOpenSSL = "^24.2.1"
cryptography = "^43.0.1"
duckdb = "^1.3.2"
deltalake = "^1.1.4"
pydantic = "^2.11.7"
gcsfs = "^2025.7.0"
s3fs = "^2025.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
